--- a/views/templates/home.ejs
+++ b/views/templates/home.ejs
@@ -1,3 +1,40 @@
+<style>
+    .box-serie {
+        border: 0px;
+        padding: 30px;
+        border-radius: 5px;
+    }
+
+    .box-serie .click-serie {
+        cursor: pointer;
+    }
+
+    .box-serie .title {
+        font-size: 22px;
+    }
+
+    .box-serie .desc {
+        font-size: 15px;
+        font-style: italic;
+        font-weight: normal;
+    }
+
+    .box-serie .text {
+        font-size: 15px;
+        font-weight: normal;
+    }
+
+    .box-serie .note {
+        font-size: 22px;
+        background-color: #ccc;
+        color: #333;
+        padding: 15px;
+        border-radius: 8px;
+        font-weight: bold;
+        width: 65px;
+        text-align: center;
+    }
+</style>
 <div class="row wrapper border-bottom white-bg page-heading">
     <div class="col-lg-10">
         <h2>Todas as Séries</h2>
@@ -13,10 +50,49 @@
         <div class="col-lg-12">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
-                    <h5>Melhores da Semana</h5>
-                </div>                
+                    <h5>Séries</h5>
+                </div>
+                <div class="ibox-content">
+                    <div class="box-serie" ng-repeat="serie in series">
+                        <div class="row">
+                            <div class="col-lg-3">
+                                <img src="{{serie.detalhes.imagemCapa}}" class="click-serie" style="width: 100%;min-height: 350px;border-radius: 4px;" />
+                            </div>
+                            <div class="col-lg-8">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <label class="title click-serie">{{serie.detalhes.titulo}}</label>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <label class="desc">{{serie.detalhes.descricao}}</label>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <label class="text" style="font-weight: bold;">{{serie.detalhes.qtdTemporadas}} temporadas - {{serie.detalhes.genero.nome}}</label>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <label class="note">{{serie.detalhes.notaGeral}}</label>
+                                    </div>
+                                </div>
+                                <div class="row" style="padding-top: 20px;">
+                                    <div class="col-md-12">
+                                        <label class="desc">Elenco</label>
+                                    </div>
+                                    <div class="col-md-12">
+                                        <label ng-repeat="ator in serie.atores" class="desc" style="display: inline-block;font-size: 13px;">{{ator.personagem}} ({{ator.nome}})&nbsp;&nbsp;</label>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <hr>                       
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-</div>
 </div>
