--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,9 +55,7 @@
   <script src="/controllers/LoginController.js"></script>
   <script src="/controllers/HomeController.js"></script>
   <script src="/controllers/SignupController.js"></script>
-  <script src="/controllers/PlacesController.js"></script>
-  <script src="/controllers/PlaceController.js"></script>
-  <script src="/controllers/ResultController.js"></script>
+  <script src="/controllers/DetalheSerieController.js"></script>
   <script src="/config.js"></script>
   <!-- Template -->
 
@@ -71,6 +69,11 @@
   <script type="text/ng-template" id="/home.html">
     <%- include top.ejs %>
     <%- include templates/home.ejs %>
+    <%- include bottom.ejs %>         
+  </script>
+  <script type="text/ng-template" id="/detalhe.html">
+    <%- include top.ejs %>
+    <%- include templates/serie-detail.ejs %>
     <%- include bottom.ejs %>         
   </script>
 
