--- a/views/templates/home.ejs
+++ b/views/templates/home.ejs
@@ -53,6 +53,26 @@
                     <h5>Séries</h5>
                 </div>
                 <div class="ibox-content">
+                    <div class="row">
+                        <div class="col-md-11">
+                            <input type="text" class="form-control" ng-model="filter.titulo" placeholder="Informe o título da série..." />
+                        </div>
+                        <div class="col-md-1">
+                            <button class="btn btn-md btn-primary" ng-click="filter()">Filtrar</button>
+                        </div>
+                    </div>
+                    <div class="row" ng-show="series.length == 0 && isProcessing == false" style="text-align: center">
+                        <div class="col-md-12" style="padding-top: 40px">
+                            <h2>Não encontramos nenhuma série com título:
+                                <b>{{filter.titulo}}</b> :(</h2>
+                        </div>
+                        <div class="col-md-12" style="padding-top: 20px;">
+                            <button class="btn btn-md btn-primary" ng-click="filter()">Aproveite e cadastre!</button>
+                        </div>
+                        <div class="col-md-12" style="padding-top: 20px;">
+                            <button class="btn btn-md btn-default" ng-click="clearFilter()">Limpar filtro</button>
+                        </div>
+                    </div>
                     <div class="box-serie" ng-repeat="serie in series">
                         <div class="row">
                             <div class="col-lg-3">
@@ -89,7 +109,7 @@
                                 </div>
                             </div>
                         </div>
-                        <hr>                       
+                        <hr>
                     </div>
                 </div>
             </div>
